added new images to front page

--- a/public/home.html
+++ b/public/home.html
@@ -39,8 +39,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>Welcome to my Engineering-110 Project Page</h1>
-            <p>This page will regularly be updated with recent information from The Forge Garden!</p>
+            <h1>SCU &#65368; Forge Garden: Water Feature Project 2024</h1>
+            <p>A community-based project with The Forge Garden!<br> My team and I engineered a water feature solution tailored for the Muwekma Ohlone tribe.</p>
             <p><a class="btn btn-primary btn-lg" href="./about" role="button">Meet the Team »</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-primary btn-lg" href="./Project" role="button">Project »</a></p>
           </div>
         </div>
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <h1>Photos from project</h1>
+          <h1>Team Forge Garden: Water Feature Photobooth</h1>
           <!-- <p>Will put captions description</p>-->
         </div>
       </div>
@@ -112,8 +112,18 @@
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6">
+          <img loading="lazy" class="img-fluid float-right" src="images/demo3.jpeg" alt="">
+          <h4>Water Grate Prototype</h4>
+          <h6>My team designed and printed Water Grates to test the flow for our final product.</h6>
+        </div>
+        <div class="col-md-3 col-6">
+          <img loading="lazy" class="img-fluid float-left" src="images/demo2_ratio.png" alt="">
+          <h4>Pot Prototype</h4>
+          <h6>A minature pot was printed to hold the grates in order to perform water flow testing.</h6>
+        </div>
+        <!-- USE 480 x 360 PHOTOS  -->
+
         <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
         <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
       </div>
