--- a/public/about.html
+++ b/public/about.html
@@ -127,10 +127,10 @@
     <div class="container">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner text-center">
-          <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/GGB_RATIO.png" alt="GGB">
+          <div class="carousel-item active"> <img loading="lazy" class="d-block w-100" src="images/GGB_RATIO.png" alt="GGB">
             <p style="margin-bottom: 2rem;">"Life's Amazing" - 11/11</p>
           </div>
-          <div class="carousel-item active"> <img class="d-block w-100" src="images/s1-c.png" alt="Hiking GGB 9 miles">
+          <div class="carousel-item"> <img class="d-block w-100" src="images/s1-c.png" alt="Hiking GGB 9 miles">
             <p style="margin-bottom: 2rem;">Hiked 9 Miles - 09/12</p>
           </div>
           <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s2-c.png" alt="Ocean Beach Sunset">
