--- a/public/project.html
+++ b/public/project.html
@@ -307,7 +307,15 @@
           <p>Our team worked on the presentation and followed up with our community partner to recieve hastier responses.</p>
           <p>This week I made more flow calculations and showed my derivation to ensure that I was not making any mistakes. I also computed the output velocity of the spout, in order for us to know which pump we would need for different pipe diameter sizes.</p>
           <p>We are activley communicating with our partner to get our orders in and planned to purchase all materials by end of this week.</p>
-          <p>In week 8, we plan to test the flow of water through the grates while completing purchasing our materials.</p>
+          <p>In week 8, we plan to test the flow of water through the grates while completing purchasing our materials.</p><br>
+          
+          
+          <p><strong>Week 8</strong></p>
+          <p>This week we purchased materials for our project including a copper pipe, solar panel with pump, abalone shells, rubber sealant, and JB weld.</p>
+          <p>Our current running total is near <code>$145.00</code>, over the <code>$100.00</code> budget we had in mind.</p>
+          <p>A key decision we made was to move on without the tribe's response.</p>
+          <p>My team members created a new grate design that interlock because the 3D printer's size is too small to fit.</p>
+          <p>The following week, we plan to test the flow of water through the new grates while assembling our water feature in order to see if our design works.</p><br>
 
         </div>
       </div>
