Home page update

--- a/public/home.html
+++ b/public/home.html
@@ -102,37 +102,55 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/garden_1.jpeg" alt="">
-          <h4>Forge Garden</h4>
-          <h6>Many livestocks, and a nice place to hangout.</h6>
+        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/Final_Product.png" alt="">
+          <h4>Final Product</h4>
+          <h6>A water feature that uses a renewable energy source while culturually representing the Muwekma Ohlone Tribe</h6>
         </div>
-        <div class="col-md-6 col-12 text-center mt-md-0 mt-2"> <img class="img-fluid" src="images/flower_bed1.jpeg" alt="">
-          <h4>Flower Bed</h4>
-          <h6>We are going to integrate a water feature near this flower bed.</h6>
+        <div class="col-md-6 col-12 text-center mt-md-0 mt-2"> <img class="img-fluid" src="images/standingpose.png" alt="">
+          <h4>Team Building</h4>
+          <h6>My teammate and I posing in-front of the first revision of our project.</h6>
         </div>
       </div>
       <div class="row mt-2">
         <div class="col-md-3 col-6">
-          <img loading="lazy" class="img-fluid float-right" src="images/demo3.jpeg" alt="">
+          <img loading="lazy" class="img-fluid float-right" src="images/demo3.png" alt="pieces of 3D printed pot and grate">
           <h4>Water Grate Prototype</h4>
           <h6>My team designed and printed Water Grates to test the flow for our final product.</h6>
         </div>
         <div class="col-md-3 col-6">
-          <img loading="lazy" class="img-fluid float-left" src="images/demo2_ratio.png" alt="">
+          <img loading="lazy" class="img-fluid float-left" src="images/demo2_ratio.png" alt="a 3D printed pot with grate inside">
           <h4>Pot Prototype</h4>
           <h6>A minature pot was printed to hold the grates in order to perform water flow testing.</h6>
         </div>
         <!-- USE 480 x 360 PHOTOS  -->
 
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/abalone_shell.png" alt="large abalone shell">
+          <h4>Abalone Shell</h4>
+          <h6>A representation of Muwekma Ohlone Tribe</h6>
+        </div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/sunpot.png" alt="">
+          <h4>A close look of our pot</h4>
+          <h6>First revision of our proudct.</h6>
+        </div>
       </div>
       <hr>
       <div class="row">
-        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-right" src="images/garden_1.jpeg" alt="">
+          <h4>Forge Garden</h4>
+          <h6>Many livestocks, and a nice place to hangout.</h6>
+        </div>
+        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid float-left" src="images/flower_bed1.jpeg" alt="">
+          <h4>Flower Bed</h4>
+          <h6>We are going to integrate a water feature near this flower bed.</h6>
+        </div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-right" src="images/pipe.png" alt="">
+          <h4>Copper Pipe</h4>
+          <h6>Dylan, a team member, JB welded this pipe together.</h6>
+        </div>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/system.png" alt="">
+          <h4>Pot System</h4>
+          <h6>Our entire system, running renewable energy source to power the pump.</h6>
+        </div>
       </div>
     </div>
   </section>
