--- a/public/home.html
+++ b/public/home.html
@@ -128,9 +128,9 @@
           <h4>Abalone Shell</h4>
           <h6>A representation of Muwekma Ohlone Tribe</h6>
         </div>
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/sunpot.png" alt="">
-          <h4>A close look of our pot</h4>
-          <h6>First revision of our proudct.</h6>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/system.png" alt="">
+          <h4>Pot System</h4>
+          <h6>Our entire system, running renewable energy source to power the pump.</h6>
         </div>
       </div>
       <hr>
@@ -147,9 +147,9 @@
           <h4>Copper Pipe</h4>
           <h6>Dylan, a team member, JB welded this pipe together.</h6>
         </div>
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/system.png" alt="">
-          <h4>Pot System</h4>
-          <h6>Our entire system, running renewable energy source to power the pump.</h6>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/pipe.png" alt="">
+          <h4>Some Text</h4>
+          <h6>Some Text.</h6>
         </div>
       </div>
     </div>
