--- a/public/home.html
+++ b/public/home.html
@@ -147,9 +147,9 @@
           <h4>Copper Pipe</h4>
           <h6>Dylan, a team member, JB welded this pipe together.</h6>
         </div>
-        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/pipe.png" alt="">
-          <h4>Some Text</h4>
-          <h6>Some Text.</h6>
+        <div class="col-md-3 col-6 mt-md-0 mt-1"><img loading="lazy" class="img-fluid float-left" src="images/lab.jpeg" alt="">
+          <h4>Attaching the Shell</h4>
+          <h6>Thinking about where to place the shell so it has an optimal angle to create sound.</h6>
         </div>
       </div>
     </div>
