--- a/public/project.html
+++ b/public/project.html
@@ -317,6 +317,13 @@
           <p>My team members created a new grate design that interlock because the 3D printer's size is too small to fit.</p>
           <p>The following week, we plan to test the flow of water through the new grates while assembling our water feature in order to see if our design works.</p><br>
 
+          <p><strong>Week 9</strong></p>
+          <p>During Thanksgiving week, our group built and tested the first revision of our system. Some challenges we had was retaining the water due to a high platform level.</p>
+          <p>Unfortunatley, our solar panel glass came shattered. This does not hinger the pump's performance but looks aesthetically displeasing.</p>
+          <p>We are currently attaching the abalone shell onto the pipe's platform. My team member Tiff, is currently printing the owl statue.</p>
+          <p>I worked on a comprehensive pump and power calculation to provide runtime estimates. I also contributed to the Final presentation slides, final report documentation and worked on the revision of our pump system to increase water rentention.</p>
+          <p>Next week, I plan to finish the discussion, power calculation, and conclusion section of the final report. I also plan to add some decorative features to the solar panel pump system.</p><br>
+
         </div>
       </div>
     </div>
