--- a/public/project.html
+++ b/public/project.html
@@ -324,6 +324,10 @@
           <p>I worked on a comprehensive pump and power calculation to provide runtime estimates. I also contributed to the Final presentation slides, final report documentation and worked on the revision of our pump system to increase water rentention.</p>
           <p>Next week, I plan to finish the discussion, power calculation, and conclusion section of the final report. I also plan to add some decorative features to the solar panel pump system.</p><br>
 
+          <p><strong>Week 10</strong></p>
+          <p>We finished the functional aspects of the water feature fountain and are now working on the aesthetics.</p>
+          <p>The solar panel is working as expected and I installed the inline battery so it can run overnight.</p>
+          <p>I am currently working on the final report of this project and I am also updating my website with our latest work.</p>
         </div>
       </div>
     </div>
