--- a/public/home.html
+++ b/public/home.html
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/Final_Product.png" alt="">
+        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/Picture1.png" alt="">
           <h4>Final Product</h4>
           <h6>A water feature that uses a renewable energy source while culturually representing the Muwekma Ohlone Tribe</h6>
         </div>
